<resources>
    <string name="app_name">FreelanceWork</string>
    <string name="navigation_drawer_open">Abrir Navegación</string>
    <string name="navigation_drawer_close">Cerrar Navegación</string>

    <string name="action_settings">Configuración</string>

    <string name="menu_home">Sistema para Control de Proyectos Freelancer</string>
    <string name="menu_proyecto">Proyectos</string>
    <string name="menu_califica">Calificaciones</string>

    <string name="ablus">Habilidades Freelance</string>
    <string name="calificaciones">Calificaciones</string>
    <string name="habilidades">Habilidades</string>
    <string name="pago">Pagos</string>
    <string name="proy">Proyectos</string>
    <string name="trab">Trabajos</string>
    <string name="user">Usuarios</string>
    <string name="salir">Salir</string>
    <string name="Trabajos">Trabajos</string>

    <string name="menu_user">Usuarios</string>
    <string name="menu_habil">Habilidades</string>
    <string name="menu_cali">Calificaciones</string>
    <string name="menu_proy">Proyectos</string>
    <string name="menu_pago">Pagos</string>
    <string name="menu_ablu">Habilidades Freelance</string>
    <string name="menu_trab">Trabajos</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="nav_header_title">App FreelanceWork</string>
    <string name="nav_header_subtitle">La red internacional de empleos</string>
    <string name="menu_Salir">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="bot_n_de_acci_n_flotante">Botón de acción flotante</string>
    <string name="logodescribe">Logo de la Aplicación</string>
    <string name="elid">ID</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="tipouser">Tipo</string>
    <string name="informacion">Información</string>
    <string name="estatus">Estatus</string>
    <string name="imagen">Imagen</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="guardar">Guardar</string>
    <string name="trabid">TrabId</string>
    <string name="calificadoid">CalificadoId</string>
    <string name="puntuacion">Puntuación</string>
    <string name="puntos">Puntos</string>
    <string name="calificadorid">CalificadorId</string>
    <string name="comentario">Comentario</string>
    <string name="fechacali">Fecha</string>
    <string name="titlistcali">Lista de Calificaciones</string>
    <string name="regresar">Regresar</string>
    <string name="menu_listcalifica">Listado de Calificaciones</string>
    <string name="hablid">HabilID</string>
    <string name="id">ID</string>
    <string name="freeid">FreeId</string>
    <string name="nivel">Nivel</string>
    <string name="monto">Monto</string>
    <string name="fechapago">FechaPago</string>
    <string name="metodopago">MetodoPago</string>
    <string name="estado">Estado</string>
    <string name="cnteid">ConteId</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="fechacreacion">Fecha Ini</string>
    <string name="fechalimite">FechaTope</string>
    <string name="proyid">ProyId</string>
    <string name="fechainicio">Fecha Ini</string>
    <string name="fechafin">Fecha Fin</string>
</resources>