<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.UsuarioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvwNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:minWidth="100dp"
            android:text="@string/nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="9dp"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwNombre"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvwApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/apellido"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwNombre" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/apellido"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwApellido"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" />

        <TextView
            android:id="@+id/tvwTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/telefono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwApellido" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/telefono"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwTelefono"
            app:layout_constraintTop_toBottomOf="@+id/etApellido" />

        <TextView
            android:id="@+id/tvwEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwTelefono" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwEmail"
            app:layout_constraintTop_toBottomOf="@+id/etTelefono" />

        <TextView
            android:id="@+id/tvwUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/usuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwEmail" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/usuario"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwUsuario"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <TextView
            android:id="@+id/tvwClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/clave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwUsuario" />

        <EditText
            android:id="@+id/etClave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/clave"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwClave"
            app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

        <TextView
            android:id="@+id/tvwTipouser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/tipouser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwClave" />

        <EditText
            android:id="@+id/etTipouser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/tipouser"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwTipouser"
            app:layout_constraintTop_toBottomOf="@+id/etClave" />

        <TextView
            android:id="@+id/tvwInformacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/informacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwTipouser" />

        <EditText
            android:id="@+id/etInformacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/informacion"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwInformacion"
            app:layout_constraintTop_toBottomOf="@+id/etTipouser" />

        <TextView
            android:id="@+id/tvwEstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/estatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwInformacion" />

        <EditText
            android:id="@+id/etEstatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/estatus"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwEstatus"
            app:layout_constraintTop_toBottomOf="@+id/etInformacion" />

        <TextView
            android:id="@+id/tvwImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/imagen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwEstatus" />

        <ImageView
            android:id="@+id/imgImagen"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/nuevo_usuario"
            android:importantForAutofill="no"
            android:src="@drawable/ic_person_add"
            app:layout_constraintStart_toEndOf="@+id/tvwImagen"
            app:layout_constraintTop_toBottomOf="@+id/etEstatus" />

        <TextView
            android:id="@+id/tvwImagenUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgImagen"
            app:layout_constraintTop_toBottomOf="@+id/etEstatus" />

        <!--CUADROS DE TEXTO-->

        <TextView
            android:id="@+id/tvwUserIdTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:minWidth="22dp"
            android:text="@string/elid"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgImagen" />

        <TextView
            android:id="@+id/tvwNombreTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:minWidth="127dp"
            android:text="@string/nombre"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvwUserIdTit"
            app:layout_constraintTop_toBottomOf="@id/imgImagen" />

        <TextView
            android:id="@+id/tvwTelefonoTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:minWidth="86dp"
            android:text="@string/telefono"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvwNombreTit"
            app:layout_constraintTop_toBottomOf="@id/imgImagen" />

        <TextView
            android:id="@+id/tvwEmailTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:minWidth="95dp"
            android:text="@string/email"
            android:textSize="12sp"
            app:cardCornerRadius="6dp"
            app:layout_constraintStart_toEndOf="@+id/tvwTelefonoTit"
            app:layout_constraintTop_toBottomOf="@id/imgImagen" />
        <!--AQUI-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvwRecyclr"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:maxHeight="250dp"
            android:minHeight="100dp"
            app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwEmailTit"
            tools:listitem="@layout/item_usr" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:drawablePadding="3dp"
            android:paddingStart="10dp"
            android:paddingTop="7dp"
            android:paddingEnd="10dp"
            android:paddingBottom="7dp"
            android:text="@string/guardar"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/rvwRecyclr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/pbProgress"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnGuardar"
            app:layout_constraintTop_toBottomOf="@+id/rvwRecyclr" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>