<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HabilUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvwFreeid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:minWidth="100dp"
            android:text="@string/freeid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etFreeid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="7dp"
            android:hint="@string/freeid"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwFreeid"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvwHablid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/hablid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwFreeid" />

        <EditText
            android:id="@+id/etHablid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/hablid"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwHablid"
            app:layout_constraintTop_toBottomOf="@+id/etFreeid" />

        <TextView
            android:id="@+id/tvwNivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:minWidth="100dp"
            android:text="@string/nivel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwHablid" />

        <EditText
            android:id="@+id/etNivel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/nivel"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwNivel"
            app:layout_constraintTop_toBottomOf="@+id/etHablid" />


        <!--CUADROS DE TEXTO-->

        <TextView
            android:id="@+id/tvwIdTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:minWidth="22dp"
            android:text="@string/elid"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNivel" />

        <TextView
            android:id="@+id/tvwFreeidTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:minWidth="127dp"
            android:text="@string/freeid"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvwIdTit"
            app:layout_constraintTop_toBottomOf="@id/etNivel" />

        <TextView
            android:id="@+id/tvwHablidTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:minWidth="86dp"
            android:text="@string/hablid"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvwFreeidTit"
            app:layout_constraintTop_toBottomOf="@id/etNivel" />

        <TextView
            android:id="@+id/tvwNivelTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:minWidth="95dp"
            android:text="@string/nivel"
            android:textSize="12sp"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvwHablidTit"
            app:layout_constraintTop_toBottomOf="@id/etNivel" />
        <!--AQUI-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvwRecyclr"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:maxHeight="250dp"
            android:minHeight="100dp"
            app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwNivelTit"
            tools:listitem="@layout/item_habil_user" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:drawablePadding="3dp"
            android:paddingStart="10dp"
            android:paddingTop="7dp"
            android:paddingEnd="10dp"
            android:paddingBottom="7dp"
            android:text="@string/guardar"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/rvwRecyclr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/pbProgress"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnGuardar"
            app:layout_constraintTop_toBottomOf="@+id/rvwRecyclr" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>